adds persitence of FCP coverage
